user-api/deploymentconfig.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  labels:
    app: thoth
    component: user-api
  name: user-api
spec:
  replicas: 1
  selector:
    service: user-api
  template:
    metadata:
      labels:
        service: user-api
    spec:
      serviceAccountName: user-api
      containers:
        - name: user-api
          image: user-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "1Gi"
              cpu: "2"
            limits:
              memory: "1Gi"
              cpu: "2"
          readinessProbe:
            httpGet:
              path: "/readiness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/liveness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
  test: false
