user-api/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: thoth
    component: user-api
  name: user-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: user-api
